--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,6 +27,7 @@
                                 <li><%= link_to "Controle de Usuarios", users_path %></li>
                             <% end %>
                             <li><%= link_to "Editar perfil", edit_user_path(current_user) %></li>
+                            <li><%= link_to "Alterar senha", "/alterar-senha" %></li>
                             <li><%= link_to "Sair", logout_path %></li>
                         </ul>
                     </div>
