--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,10 @@
         </div>
         <!-- / CONTENT -->
 
+        <script type="text/javascript">
+          if( '<%= flash["notice"] %>' != null && '<%= flash["notice"] %>' != "" )
+            alert( '<%= flash["notice"] %>' );
+        </script>
+
 </body>
 </html>
