--- a/app/views/layouts/dash.html.erb
+++ b/app/views/layouts/dash.html.erb
@@ -43,5 +43,11 @@
         </div>
         <!-- / CONTENT -->
 
+        
+        <script type="text/javascript">
+          if( '<%= flash["notice"] %>' != null && '<%= flash["notice"] %>' != "" )
+            alert( '<%= flash["notice"] %>' );
+        </script>
+
 </body>
 </html>
