--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<%= yield %>
+	
+        <script type="text/javascript">
+          if( '<%= flash["notice"] %>' != null && '<%= flash["notice"] %>' != "" )
+            alert( '<%= flash["notice"] %>' );
+        </script>
 </body>
 </html>
