--- a/app/views/financeiro/novo_pagamento.html.erb
+++ b/app/views/financeiro/novo_pagamento.html.erb
@@ -16,7 +16,7 @@
     <li>
         <label>
             <span>Nome:</span><br/>
-            <%= r.password_field :name, :class => "inputMedio input" %>
+            <%= r.text_field :name, :class => "inputMedio input" %>
         </label>
     </li>
 
