--- a/app/views/financeiro/index.html.erb
+++ b/app/views/financeiro/index.html.erb
@@ -5,18 +5,8 @@
 <h1>Financeiro</h1>
 
 <div id="guardaPesquisa">
-  <%= form_for(@release = '') do |f| %>
+  <%= form_for(@releases = '') do |f| %>
     <ul>
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Nome</label>
-        <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
-      </li>
-      
-      <li class="escondidoPesquisaAvancada">
-        <label for="campoNome">Login</label>
-        <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
-      </li>
-
       <li class="noPaddingHomes">
         <label for="campoNome" class="escondidoPesquisaAvancada">E-mail</label>
         <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
@@ -34,13 +24,15 @@
 </div>
 
 <div id="guardaAtividadesRecentes">
-  <h2>Ultimos usuarios</h2>
-  <!-- < @release.each do |user| %>
+  <h2>Recebimentos mais proximos</h2>
+  <% @release.each do |rel| %>
     <p>
-      <span>< user.name %></span> 
-      < link_to 'Visualizar', edit_user_path(user), :class => 'btVoltarForm' %>
+      <span><%= rel.name %></span>
+      <span><%= rel.total_amount %></span>
+      <span>DT Venc</span>
+      <%= link_to 'Visualizar', "javascript:void(0);", :class => 'btVoltarForm' %>
     </p>
-  < end %> -->
+  <% end %>
 </div>
 
 <div id="guardaResultadoPesquisa">
