--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -3,15 +3,10 @@
 <head>
   <title><%= yield :title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application", "jquery-ui-1.8.23.custom.min" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	<%= yield %>
-	
-        <script type="text/javascript">
-          if( '<%= flash["notice"] %>' != null && '<%= flash["notice"] %>' != "" )
-            alert( '<%= flash["notice"] %>' );
-        </script>
 </body>
 </html>
