Testar jQuery UI depois

--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= yield :title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application", "jquery-ui-1.8.23.custom.min" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
