Adicionado negrito ao layout da nova senha gerada

--- a/app/views/change_password_mailer/new_password_mail.html.erb
+++ b/app/views/change_password_mailer/new_password_mail.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>GVAR! Alteração de senha</h1>
     <p>
-      <%= @usuario %> sua senha foi alterada para <%= @senha %>
+      <%= @usuario %> sua senha foi alterada para <b><%= @senha %></b>
     </p>
     <p>
       Por favor altere essa senha por segurança.<br />
