--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,19 +2,19 @@
 <div id="headerInternas">
             <div class="wrapperInternas">
                 <div id="logoInternas">
-                    <%= link_to image_tag("logo-internas.gif", :alt => ""), '/' %>
+                    <%= link_to image_tag("logo-internas.gif", :alt => ""), dashboard_path %>
                 </div>
-                
+
                 <div id="menuInternas">
                     <ul>
-                        <li><%= link_to "", "/", :id => "home", :title => "Pagina inicial"%></li>
+                        <li><%= link_to "", dashboard_path, :id => "home", :title => "Pagina inicial"%></li>
                         <li><%= link_to "", cursos_index_path, :id => "cursos", :title => "Cursos"%></li>
                         <li><%= link_to "", servicos_index_path, :id => "servicos", :title => "Servicos"%></li>
                         <li><%= link_to "", assessoria_index_path, :id => "assessoria", :title => "Assessoria"%></li>
                         <li><%= link_to "", financeiro_index_path, :id => "financeiro", :title => "Financeiro"%></li>
                     </ul>
                 </div>
-                
+
                 <div id="guardaNomeUsuario">
                     <p>
                         <span><%= current_user.name %></span>
@@ -27,17 +27,17 @@
                                 <li><%= link_to "Controle de Usuarios", users_path %></li>
                             <% end %>
                             <li><%= link_to "Editar perfil", edit_user_path(current_user) %></li>
-                            <li><%= link_to "Alterar senha", "/alterar-senha" %></li>
+                            <li><%= link_to "Alterar senha", alterar_senha_path %></li>
                             <li><%= link_to "Sair", logout_path %></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            
+
             <div id="guardaMenuCategoria">
                 <p>
                     <%= link_to "Item 01", "javascript:void(0);" %> |
-                    <%= link_to "Item 02", "javascript:void(0);" %> | 
+                    <%= link_to "Item 02", "javascript:void(0);" %> |
                     <%= link_to "Item 03", "javascript:void(0);" %>
                 </p>
             </div>
