--- a/app/views/financeiro/novo_pagamento.html.erb
+++ b/app/views/financeiro/novo_pagamento.html.erb
@@ -8,8 +8,9 @@
 <ul>
     <li>
         <label>
-            <span>Codigo:</span><br/>
-            <%= r.text_field :code, :class => "inputMedio input" %>
+            <span>Codigo: </span>
+            <%= @release_code %>
+            <%= hidden_field_tag "release[code]", @release_code %>
         </label>
     </li>
 
@@ -62,7 +63,7 @@
   <input id="release_instalments_attributes_0_amount" name="release[instalments_attributes][0][amount]" size="30" type="text">
 
   <select id="status_id" name="status_id"><option value="0">Pendente</option>
-  
+
    Testes para gerar duas parcelas fixas, trocar por ajax + partials -->
   <% number_instalments = 0 %>
   <% # (1..number_instalments).each  ...  %>
@@ -76,7 +77,7 @@
       <th width="14%"><span>Forma de Pagamento</span></th>
       <th width="14%"><span>Status</span></th>
     </tr>
-  
+
   <% (1..number_instalments).each do |number_instalment| %>
     <tr>
       <%= r.fields_for :instalments do |i| %>
@@ -88,7 +89,7 @@
         <td width="14%">
           <span><%= i.text_field :amount, :class => "inputPeq input" %></span>
         </td>
-        
+
         <td width="14%">
           <span><%= i.text_field :expiration_date, :class => "inputPeq input" %></span>
         </td>
@@ -132,7 +133,7 @@
 
 <script type="text/javascript">
 function SomenteNumero(e){
-    var tecla=(window.event)?event.keyCode:e.which;   
+    var tecla=(window.event)?event.keyCode:e.which;
     if((tecla>47 && tecla<58)) return true;
     else{
       if (tecla==8 || tecla==0) return true;
@@ -175,17 +176,17 @@ function SomenteNumero(e){
 
               _tr += '<tr class="generated">';
               _tr += '  <td width="14%"> <span>'+(i+1)+'/'+parcelas+'</span> <input id="release_instalments_attributes_'+i+'_number" name="release[instalments_attributes]['+i+'][number]" type="hidden" value="'+(i+1)+'"> </td>';
-              
+
               _tr += '  <td width="14%"> <span><input class="inputMenor input soNumeros" id="release_instalments_attributes_'+i+'_amount" name="release[instalments_attributes]['+i+'][amount]" size="30" type="text" value="R$ '+(parseFloat(valor/parcelas))+'"></span> </td>';
 
               _tr += '  <td width="14%"> <span><input class="inputMenor input" id="release_instalments_attributes_'+i+'_expiration_date" name="release[instalments_attributes]['+i+'][expiration_date]" size="30" type="text"></span> </td>';
 
               _tr += '  <td width="14%"> <span><input class="inputMenor input" id="release_instalments_attributes_'+i+'_paid_at" name="release[instalments_attributes]['+i+'][paid_at]" size="30" type="text"></span> </td>';
-              
+
               _tr += '  <td width="14%"> <span><input class="inputMenor input soNumeros" id="release_instalments_attributes_'+i+'_amount_paid" name="release[instalments_attributes]['+i+'][amount_paid]" size="30" type="text"></span> </td>';
-              
+
               _tr += '  <td width="14%"> <span>'+formasPagamento+'</span> </td>';
-              
+
               _tr += '  <td width="14%"> <span>'+status+'</span> </td>';
               _tr += '</tr>';
           }
