--- a/app/views/financeiro/novo_pagamento.html.erb
+++ b/app/views/financeiro/novo_pagamento.html.erb
@@ -50,7 +50,7 @@
 
     <li>
         <label>
-            <%= r.check_box :fixed_payment %> <span>Pagamento fixo</span>
+            <%= r.check_box :fixed_payment %> <span>Despesa fixa</span>
         </label>
     </li>
 
