--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -587,3 +587,12 @@ margin:0px 10px;
 }
 
 #contentInternas .escondidoPesquisaAvancada{ display:none; }
+
+#contentInternas .doisInputs label{
+    float:left;
+    padding:5px 5px 0px 0px;
+}
+
+#contentInternas .doisInputs label.primeiro{
+    padding-left:5px;
+}
